# rPGA

./: .gitignore  Makefile.in  README.md  configure  configure.ac  setup.py
src/rPGA/scripts/: assign.py  discover.py  genomes.py  genotype.py  init.py  junctions.py  mapping.py  merge.py  personalize.py  rPGA.py  running.py  seqs.py  splicing.py
